# precise-ledger-pro

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  PATENT_APPLICATION.md  README.md  cloudbuild.yaml  cloudformation.iam.yaml  cloudformation.yaml  demo.http  http-client.env.json  pom.xml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  settings.xml
.github/: .nwave-copilot-manifest.json  copilot-instructions.md
.github/agents/: nw-acceptance-designer-reviewer.agent.md  nw-acceptance-designer.agent.md  nw-agent-builder-reviewer.agent.md  nw-agent-builder.agent.md  nw-data-engineer-reviewer.agent.md  nw-data-engineer.agent.md  nw-documentarist-reviewer.agent.md  nw-documentarist.agent.md  nw-functional-software-crafter.agent.md  nw-platform-architect-reviewer.agent.md  nw-platform-architect.agent.md  nw-product-discoverer-reviewer.agent.md  nw-product-discoverer.agent.md  nw-product-owner-reviewer.agent.md  nw-product-owner.agent.md  nw-researcher-reviewer.agent.md  nw-researcher.agent.md  nw-software-crafter-reviewer.agent.md  nw-software-crafter.agent.md  nw-solution-architect-reviewer.agent.md  nw-solution-architect.agent.md  nw-troubleshooter-reviewer.agent.md  nw-troubleshooter.agent.md
.github/prompts/: nw-bugfix.prompt.md  (+23 more)
docs/: CNAME  demo.html  index.html  whitepaper.html
haskell/: precise-ledger.cabal
haskell/src/Ledger/: Activity.hs  Balance.hs  Core.hs  Entry.hs  Interest.hs  Service.hs  Spread.hs  Types.hs
haskell/test/Ledger/: BalanceSpec.hs  CoreSpec.hs  EntrySpec.hs  InterestSpec.hs  ServiceSpec.hs  SpreadSpec.hs
(+235 files in other folders)
